# 15menit

./: .env.example  .gitignore  README.md  biome.json  docker-compose.yml  lighthouserc.json  package.json  railpack.json  railway.web.toml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
apps/api/: Dockerfile  pyproject.toml  railpack.json  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_isochrone_cache.py
apps/api/app/: config.py  env_loader.py  main.py
apps/api/app/core/: bbox.py  cache.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: commute.py  coverage.py  geocode.py  isochrone.py  meta.py  stops.py
apps/api/app/services/: commute.py  geocode.py  gtfs.py  routing.py  supabase_cache.py  transit.py
apps/api/tests/: conftest.py  test_car.py  test_city_template.py  test_commute.py  test_config.py  test_db_cache.py  test_geocode.py  test_gtfs.py  test_gtfs_stops.py  test_isochrone.py  test_osm_download.py  test_stops.py  test_transit_gtfs.py  test_valhalla.py
apps/api/tests/fixtures/: stops.json
apps/web/: components.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
cities/: bandung.yaml
docs/: artifact_format.md  backlog.md  bodetabek-gtfs.md  changelog.md  prd.md  setup-env.md
scripts/: add-city.ts  build_krl_gtfs.py  build_lrt_gtfs.py  build_mrt_gtfs.py  docker-up.ps1  download-osm.ps1  download-osm.sh  download_gtfs.py  fetch_krl_stops.py  fetch_lrt_stops.py  fetch_mrt_stops.py  ingest_gtfs.py  merge_bodetabek.py  merge_gtfs.py  release-sync.mjs
(+40 files in other folders)
