[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "15menit-api"
version = "0.1.0"
description = "15menit FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
db = [
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
]
gtfs = [
    "gtfs-kit>=8.0.0",
]
transit = [
    "r5py>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring DATABASE_URL / PostGIS (docker compose up -d db)",
]
